# websocket-python-example

./: .dockerignore  .env.dev  .env.prod  .env.test  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  run-client.sh  run-server.sh  websocket_client.py
.github/workflows/: build.yaml
app/: __init__.py  basic_auth.py  config.py  main.py
app/routers/: build_info.py  probes.py  root.py  status.py  websocket.py
deployment/k8s/helm/: Makefile
deployment/k8s/helm/chart/: Chart.yaml  values.yaml
deployment/k8s/helm/chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deployment/k8s/helm/chart/templates/tests/: test-connection.yaml
tests/: conftest.py  test_build_info.py  test_probes.py  test_root.py  test_status.py
