[project]
name = "websocket-python-example"
version = "0.1.0"
description = "A production-ready FastAPI application template"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.0",
    "pydantic-settings>=2.13.0",
    "uvicorn[standard]>=0.41.0",
    "psutil>=7.2.0",
    "websockets>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.0",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
    "types-psutil>=7.2.0",
    "pip-audit>=2.10.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
